# TextSentimentAnalysis-AI

./: .gitignore  BZ2_to_ CSV.py  README.md  pyproject.toml  setup.py
models/: .gitkeep
notebooks/: 01_EDA.ipynb  02_Experimentation.ipynb  03_Results.ipynb
reports/: tune_svc_200k.csv  tune_svc_full.csv
scripts/: quick_train_and_eval.py  rebalance_external.py  train_transformer.py  tune_svc.py
src/data/: __init__.py  augment.py  make_dataset.py  preprocess.py
src/features/: build_features.py
src/models/: __init__.py  predict_model.py  train_model.py
src/visualization/: __init__.py  visualize.py
