[project]
name = "textsentimentanalysis-ai"
version = "0.1.0"
description = ""
authors = [
    {name = "Matheus Braum",email = "mtbraum@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas (>=2.3.3,<3.0.0)",
    "scikit-learn (>=1.7.2,<2.0.0)",
    "joblib (>=1.5.2,<2.0.0)",
    "matplotlib (>=3.8,<4.0)",
    "seaborn (>=0.13,<1.0)",
    "numpy (>=1.26,<2.0)",
    "requests (>=2.31,<3.0)",
    "evaluate (>=0.4.0,<1.0.0)",
    "accelerate (>=0.26.0,<1.0.0)",
    "dataset (>=1.6.2,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

